2002-05-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/*.cc: remove as many iostream use as possible. 

	* flower/ : remove text-db, text-stream, data-file.
	
2002-05-15  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py: add --no-music option: strip all blocks.
	(completize_preamble): don't barf if no preamble present.
	(do_file): allow extensions on --output

	* scripts/ly2dvi.py (make_preview): make automatic preview of
	first system. Small cleanups.

2002-05-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py (make_pixmap): output png directly.

	* mf/GNUmakefile (INSTALLATION_OUT_FILES4): create and install
	fonts.dir file.

	* lily/parser.yy (My_lily_parser): uncomment code. (Causes
	problems  with recent bison releases).

	* make/lilypond.redhat.spec.in: add pfa fonts to X. 

2002-05-07  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Fixes the order of the note name list.

2002-05-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py: Add html/dtml output, pseudo-filter
	capability, --verbose option, rlimit hack.

2002-05-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/piano-pedal-engraver.cc: cleanups.

	* lily/accidental.cc (after_line_breaking): add break tie
	reminders.

	* lily/text-engraver.cc (try_music): don't typeset fingerings

2002-05-05  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Handle \breve as a note (rest) duration.

2002-05-04  Han-Wen  <hanwen@cs.uu.nl>

	* lily/*.cc: change gh_str02scm() to ly_str02scm().

	* lily/spacing-spanner.cc (note_spacing): Bound
	shortest-playing-length by the distance to next note. This should
	fix chord tremolo spacing.

	* VERSION: 1.5.55 released

	* lily/stem.cc (off_callback): invisible stem over whole note is
	centered on note now.

	* lily/stem-engraver.cc (acknowledge_grob): X_AXIS Parent of
	stem-tremolo is stem now.

	* input/mozart-hrn*.ly: many corrections. 

	* lily/dynamic-engraver.cc (acknowledge_grob): add Scripts  to