@@ -350,9 +350,12 @@ Piano_pedal_engraver::create_bracket_grobs (Pedal_info *p, SCM pedaltype)
 				       pedaltype == ly_symbol2scm ("mixed") ? 
 				       gh_bool2scm ( (bool) ! p->req_l_drul_[STOP]) :
 				       gh_bool2scm (false));
-      if (p->item_p_)
-	p->bracket_p_->set_parent (p->item_p_, Y_AXIS);
 
+      /*
+       Warning: we can't hang the bracket on an item in Y-direction:
+       it will cause problems when the bracket is broken, because the
+       item can be on another line.
+      */
       p->bracket_p_->set_bound (LEFT, unsmob_grob (get_property ("currentMusicalColumn")));
       Axis_group_interface::add_element (p->line_spanner_, p->bracket_p_);	      
 
